Move models and services from .NET Core application to netstandard library

--- a/Taurit.TotalCommander.F4Editor.Commons/Taurit.TotalCommander.F4Editor.Commons.csproj
+++ b/Taurit.TotalCommander.F4Editor.Commons/Taurit.TotalCommander.F4Editor.Commons.csproj
@@ -1,16 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>WinExe</OutputType>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
-    <RuntimeIdentifiers>win10-x64</RuntimeIdentifiers>
-    <ApplicationIcon />
-    <StartupObject />
+    <TargetFramework>netstandard1.3</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="11.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+    <PackageReference Include="System.Diagnostics.Process" Version="4.3.0" />
   </ItemGroup>
 
 </Project>
