--- a/Taurit.TotalCommander.F4Editor.DotNetFramework/Taurit.TotalCommander.F4Editor.DotNetFramework.csproj
+++ b/Taurit.TotalCommander.F4Editor.DotNetFramework/Taurit.TotalCommander.F4Editor.DotNetFramework.csproj
@@ -60,7 +60,7 @@
     <GenerateManifests>true</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="JetBrains.Annotations, Version=11.1.0.0, Culture=neutral, PublicKeyToken=1010a0d8d6380325, processorArchitecture=MSIL">
