--- a/Taurit.TotalCommander.F4Editor.DotNetFramework/Taurit.TotalCommander.F4Editor.DotNetFramework.csproj
+++ b/Taurit.TotalCommander.F4Editor.DotNetFramework/Taurit.TotalCommander.F4Editor.DotNetFramework.csproj
@@ -1,57 +1,50 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-	<Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props"
-	        Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
-	<PropertyGroup>
-		<Configuration>Debug</Configuration>
-		<Platform>AnyCPU</Platform>
-		<ProjectGuid>{25CF8391-EFF0-43CB-BBE3-E3BB1A3C9035}</ProjectGuid>
-		<OutputType>WinExe</OutputType>
-		<RootNamespace>Taurit.TotalCommander.F4Editor.DotNetFramework</RootNamespace>
-		<AssemblyName>Taurit.TotalCommander.F4Editor.DotNetFramework</AssemblyName>
-		<TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-		<FileAlignment>512</FileAlignment>
-		<PublishUrl>D:\tmppublish\</PublishUrl>
-		<Install>true</Install>
-		<InstallFrom>Disk</InstallFrom>
-		<UpdateEnabled>false</UpdateEnabled>
-		<UpdateMode>Foreground</UpdateMode>
-		<UpdateInterval>7</UpdateInterval>
-		<UpdateIntervalUnits>Days</UpdateIntervalUnits>
-		<UpdatePeriodically>false</UpdatePeriodically>
-		<UpdateRequired>false</UpdateRequired>
-		<MapFileExtensions>true</MapFileExtensions>
-		<ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-		<BootstrapperEnabled>true</BootstrapperEnabled>
-		<PlatformTarget>AnyCPU</PlatformTarget>
-		<DebugSymbols>true</DebugSymbols>
-		<DebugType>full</DebugType>
-		<Optimize>false</Optimize>
-		<OutputPath>bin\Debug\</OutputPath>
-		<DefineConstants>DEBUG;TRACE</DefineConstants>
-		<ErrorReport>prompt</ErrorReport>
-		<WarningLevel>4</WarningLevel>
-	</PropertyGroup>
-
-	<ItemGroup>
-		<Reference Include="System" />
-		<Reference Include="System.Core" />
-		<Reference Include="System.Runtime.Serialization" />
-		<Reference Include="System.Xml" />
-	</ItemGroup>
-	
-	<ItemGroup>
-		<Compile Include="Models\ConfigurationFileModel.cs" />
-		<Compile Include="Models\Editor.cs" />
-		<Compile Include="Models\GenericEditor.cs" />
-		<Compile Include="Models\SpecialPurposeEditor.cs" />
-		<Compile Include="Program.cs" />
-		<Compile Include="Properties\AssemblyInfo.cs" />
-		<Compile Include="Services\FileOpener.cs" />
-		<Compile Include="Services\ProgramMatcher.cs" />
-		<None Include="App.config" />
-	</ItemGroup>
-	
-	<Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+  <PropertyGroup>
+    <Configuration>Release</Configuration>
+    <Platform>AnyCPU</Platform>
+    <ProjectGuid>{25CF8391-EFF0-43CB-BBE3-E3BB1A3C9035}</ProjectGuid>
+    <OutputType>WinExe</OutputType>
+    <RootNamespace>Taurit.TotalCommander.F4Editor.DotNetFramework</RootNamespace>
+    <AssemblyName>Taurit.TotalCommander.F4Editor.DotNetFramework</AssemblyName>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
+    <FileAlignment>512</FileAlignment>
+    <PublishUrl>D:\tmppublish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <DebugSymbols>false</DebugSymbols>
+    <Optimize>false</Optimize>
+    <OutputPath>bin\Release\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <ErrorReport>prompt</ErrorReport>
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <ItemGroup>
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Models\ConfigurationFileModel.cs" />
+    <Compile Include="Models\Editor.cs" />
+    <Compile Include="Models\GenericEditor.cs" />
+    <Compile Include="Models\SpecialPurposeEditor.cs" />
+    <Compile Include="Program.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\FileOpener.cs" />
+    <Compile Include="Services\ProgramMatcher.cs" />
+  </ItemGroup>
+  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
